--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,7 +49,7 @@ nav .nav-wrapper {
 
 
 #image {
-	background-image: url('./mainBackground.jpg');
+	background-image: url('https://img5.goodfon.com/wallpaper/nbig/a/87/car-logos-texture-background.jpg');
 	display: block;
   	position: fixed;
   	min-height: 100%;
