--- a/client/src/App.css
+++ b/client/src/App.css
@@ -61,6 +61,10 @@ nav .nav-wrapper {
 	z-index: 1;
 }
 
+.homeLabel {
+	font-size: 15px;
+}
+
 #submit {
 	position: static;
   	background-color: rgb(0,0,0); 
@@ -104,8 +108,11 @@ nav .nav-wrapper {
 }
 
 .btn {
-	margin-left: 20px;
 	font-family: 'Fira Sans Condensed', sans-serif;
+}
+
+.submitBtn {
+	margin-left: 20px;
 }
 
 label {
@@ -143,24 +150,24 @@ nav ul a:hover {
     width: 20%;
 }
 
-.gallery{
+.gallery {
     display: flex;
     flex-wrap: wrap;
     justify-content:space-around;
 }
 
-.item{
+.logout {
+	margin-right: 20px;
+	margin-left: 20px
+}
+
+.item {
     width:30%
 }
 
-.orderCar {
-	font-size: 15px;
-}
-
-.orderLabel {
-	font-weight: bold;
-	font-size: 20px;
-	text-align: left;
+.carDescription {
+	font-size: 18px;
+	font-family: 'Fira Sans Condensed', sans-serif;
 }
 
 .modal label {
@@ -181,12 +188,13 @@ nav ul a:hover {
     height: 100%; 
     overflow: auto; 
     background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4);
+	background-color: rgba(0,0,0,0.4);
+	font-family: 'Fira Sans Condensed', sans-serif;
 }
 
 
 .modal-content {
-    text-align: center;
+    text-align: left;
 	background-color: #fefefe;
     margin: auto;
     padding: 20px;
@@ -194,6 +202,42 @@ nav ul a:hover {
     width: 40%;
 }
 
+.orderCar {
+	font-size: 18px;
+	margin-left: 60px;
+}
+
+.orderLabel {
+	font-weight: bold;
+	font-size: 20px;
+	text-align: left;
+}
+
+.orderTitle {
+	position: center;
+	font-size: 60px;
+}
+
+.startDate {
+	margin-right: 27px;
+}
+
+.endDate {
+	margin-right: 35px;
+}
+
+.next {
+	margin-left: 45%;
+	margin-right: 20px;
+}
+
+.submit {
+	margin-left: 20px;
+}
+
+.back {
+	margin-left: 40%;
+}
 
 .close {
     color: #aaaaaa;
@@ -220,16 +264,12 @@ nav ul a:hover {
 }
 
 #datepicker{
-
-  width: 50%;
+  	width: 50%;
 	text-align: center;
 }
 
-
-
-
 .welcome {
-    margin: 5rem 0 0 1rem;
+    margin: 2rem 0 0 1rem;
     font-size: 45px;
     font-family: 'Fira Sans Condensed', sans-serif;
 }
@@ -250,6 +290,10 @@ nav ul a:hover {
     width: 100%;
     height: auto;
     word-wrap: break-word;
+}
+
+.cancel {
+	margin: -4rem 1rem 0 0;
 }
 
 #myCar {
